kubernetes-manifests/auth-server.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: auth-server
  name: auth-server
spec:
  imagePullSecrets:
    - name: ghcrcred
  containers:
    - image: ghcr.io/liberty52/liberty52-auth-server:dev-v-2023.09.26-121457
      name: auth-server
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: auth-server
  name: auth-server
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: auth-server
