kubernetes-manifests/product-server.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: product-server
  name: product-server
spec:
  imagePullSecrets:
    - name: ghcrcred
  containers:
    - image: ghcr.io/liberty52/liberty52-product-server:dev-v-2023.09.30-105356
      name: product-server
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: product-server
  name: product-server
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: product-server
